--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,259 +1,127 @@
-a,
-a:hover,
-a:focus,
-a:active {
-  text-decoration: none;
-  color: inherit;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
 
-.inner-right-500 {
-  display: none;
+footer{
+    background-color:rgb(0, 0, 44);
+    padding:70px 0;
+    line-height: 1.5;
+    font-family: 'Poppins', sans-serif;
+
+    .container{
+    max-width:1170px;
+    margin:auto;
 }
-
-.mediaContainer {
-  .socialMedia {
-    img {
-      transition: transform 0.3s;
-      width: 20px;
-    }
-    img:hover {
-      transform: scale(1.2);
-    }
-  }
+ul{
+    list-style:none;
 }
-
-.developersLink {
-  font-size: 1rem;
-  text-align: center;
-  order: 2;
-}
-
-.ct-footer-post .inner-left,
-.ct-footer-post .inner-right,
-.developersLink {
-  padding: 20px 0;
-}
-
-.ct-footer-post .inner-left {
-  order: 1;
-}
-
-.ct-footer-post .inner-right {
-  order: 3;
-}
-
-.ct-footer {
-  padding-top: 70px;
-  font-family: poppins;
-  margin-top: 4rem !important;
-  position: relative;
-  margin: 0 auto;
-  width: 80%;
-}
-
-.ct-footer-list {
-  padding: 50px 0;
-  list-style: none;
-  padding-left: 0;
-  display: table;
-  width: 100%;
-}
-
-.ct-footer-list li {
-  margin: 0.5rem;
-  margin-left: 0;
-}
-
-.ct-footer-post {
-  margin-bottom: 4rem;
-}
-
-.alt_container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-@media (max-width: 479px) {
-  .ct-footer-list {
-    padding: 20px 0;
-  }
-}
-
-@media (min-width: 1200px) {
-  .ct-footer-list > li {
-    width: 20%;
-    display: table-cell;
-    vertical-align: top;
-  }
-
-  .ct-footer-list > li:last-child {
-    width: 7%;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1199px) {
-  .ct-footer-list > li {
-    width: 33.3333%;
-  }
-}
-
-@media (min-width: 480px) and (max-width: 767px) {
-  .ct-footer-list > li {
-    width: 50%;
-  }
-}
-
-@media (max-width: 479px) {
-  .ct-footer-list > li {
-    width: 100%;
-    text-align: center;
-  }
-}
-
-@media (max-width: 1199px) {
-  .ct-footer-list > li {
-    display: block;
-    float: left;
-  }
-  .alt_container {
-    flex-direction: column;
-    justify-content: none;
-  }
-  .ct-footer-post {
-    text-align: center;
-  }
-
-  .developersLink {
-    font-size: 1rem;
-    order: 0;
-  }
-
-  .ct-footer-post .inner-left,
-  .ct-footer-post .inner-right,
-  .developersLink {
-    padding: 0.5rem 0;
-  }
-}
-
-.ct-footer-list > li .ct-footer-list-header {
-  font-family: poppins;
-  font-size: 1.8rem;
-  margin-bottom: 0.5rem;
-  margin-top: 1rem;
-}
-
-.ct-footer-list > li ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-.ct-footer-list > li ul li a {
-  color: #4f4f4f;
-}
-
-.ct-footer-list > li ul li a:hover {
-  text-decoration: underline;
-}
-
-.ct-footer-post {
-  border-top: 1px solid #4f4f4f;
-  padding: 30px 0;
-}
-
-.ct-footer-post ul {
-  list-style: none;
-  padding-left: 0;
-  margin: 0 -20px;
-}
-
-.ct-footer-post ul li {
-  display: inline-block;
-  margin: 0 20px;
-}
-
-.ct-footer-post a:hover {
-  text-decoration: underline;
-}
-
-@media (min-width: 768px) {
-  .ct-footer-post p {
-    display: inline-block;
-  }
-
-  .ct-footer-post p + p {
-    padding-left: 50px;
-  }
-}
-
-@media (max-width: 991px) {
-  .ct-footer-post {
-    text-align: center;
-  }
-}
-
-.follow {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 2.6rem;
-  text-align: center;
-  color: #000000;
-}
-
-.mediaContainer {
-  margin-top: 2.25rem;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 3rem;
-  align-items: center;
-  .socialMedia {
-    display: grid;
-    grid-template-columns: repeat(5, max-content);
-    justify-content: space-evenly;
-    align-items: center;
-    height: 80px;
-    width: 450px;
-
-    img {
-      width: 42px;
-    }
-  }
-}
-
-@media all and (max-width: 1200px) {
-  .ct-footer-list,
-  .follow,
-  .mediaContainer {
-    display: none;
-  }
-
-  .ct-footer-post {
-    margin-bottom: 0rem !important;
-  }
-
-  .ct-footer {
-    margin-top: 2rem !important;
-  }
-}
-
-@media all and (max-width: 500px) {
-  .alt_container {
-    flex-direction: column;
-  }
-  .inner-right {
-    display: none;
-  }
-  .developersLink {
-    font-size: 0.9rem;
-  }
-  .inner-right-500 {
-    display: flex;
+.row{
+    display:flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    font-size: 0.9rem;
-  }
+}
+.footer-col{
+    width:25%;
+    padding:0 15px;
+}
+.footer-col h2{
+    color:white;
+    font-size:18px;
+    text-transform:capitalize;
+    margin-bottom: 35px;
+    font-weight: bold;
+    position: relative;
+}
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform:capitalize;
+    color:white;
+    font-weight: 300;
+    display:block;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+    color:white;
+}
+.footer-col .sociallinks a{
+display:inline-block;
+height:40px;
+width:40px;
+background-color: rgba(255,255,255,0.2);
+margin: 0 10px 10px 0;
+text-align: center;
+line-height: 40px;
+border-radius: 50%;
+color:white;
+transition: all 0.5s ease;
+}
+.footer-col .sociallinks a:hover{
+    color:#24262b;
+    background-color: white;
+    transform: scale(1.2);
+}
+.image-col{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content:center;
+}
+.image1{
+    display: inline-block;
+    margin: 0.5rem;
+    height: 90px;
+    width:90px;
+    transition: transform 100ms ease-in-out;
+    border-radius: 50%;
+    background-color: rgb(0, 0, 44);
+}
+.image1:hover{
+    transform: scale(1.08);
+}
+.image2{
+    display: inline-block;
+    margin: 0.5rem;
+    height: 90px;
+    width:90px;
+    transition: transform 100ms ease-in-out;
+    border-radius: 50%;
+    background-color: rgb(0, 0, 44);
+}
+.image2:hover{
+    transform: scale(1.08);
+}
+p{
+    text-align: center;
+    color:white;
+    font-weight: 300;
+}
 
-  .inner-left {
-    font-size: 0.9rem;
-  }
+@media(max-width:574px){
+    .footer-col{
+        width:100%;
+        margin-bottom: 30px;
+   
+    }
+}
+}
+
+@media(max-width:768px){
+    .image1 .image2{
+        height: 80px;
+        width: 80px;
+    }
+    footer{
+        text-align: center !important;
+    }
+    .footer-col{
+
+        width:50%;
+        margin-bottom: 30px;
+    }
 }
