--- a/src/Components/Timeline/timeline.scss
+++ b/src/Components/Timeline/timeline.scss
@@ -9,10 +9,6 @@
 }
 
 .timeline_container{
-  
-    
-  
-
   --color: rgba(30, 30, 30);
   --bgColor: rgba(245, 245, 245);
   --accent-color: #ffc107;
@@ -66,6 +62,7 @@ ul li {
   grid-row: span 2;
   display: grid;
   grid-template-rows: min-content min-content min-content;
+  box-shadow: 5px 5px 16px 0px #b8b6b6;
 }
 
 /* date */
@@ -189,9 +186,15 @@ ul li .descr::before {
     border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
   }
 }
+@media (max-width: 1000px) {
+    ul{
+      width: 40rem;
+    }
+  }
 @media (max-width: 768px) {
     ul{
-      width: 90% !important;
+      width: 100%;
+      font-size: 1rem;
     }
   }
 }
