--- a/src/Components/Home/HeroSection/HeroSection.scss
+++ b/src/Components/Home/HeroSection/HeroSection.scss
@@ -33,10 +33,14 @@
   }
 
   .video-container {
+    width: 480px;
+    height: 360px;
     z-index: 1;
     video {
       margin-top: 9rem;
       border-radius: 1rem;
+      width: 100%;
+      height: 100%;
     }
   }
 
@@ -66,6 +70,7 @@
       color: floralwhite;
     }
     .video-container {
+      width: 100%;
       video {
         margin-top: 1rem;
       }
