Font size adjusted in hero-section and contacts-us

--- a/src/Components/Home/HeroSection/HeroSection.scss
+++ b/src/Components/Home/HeroSection/HeroSection.scss
@@ -35,7 +35,7 @@
 
   .donateCount {
     color: hsl(248, 100%, 11%);
-    font-weight: 700;
+    font-weight: 500;
     font-size: 1.5rem;
   }
 }
@@ -84,6 +84,9 @@
     .donateCount {
       text-align: center;
       color: floralwhite;
+      p {
+        font-size: 1.3rem;
+      }
     }
     .mob-hide {
       display: none;
