--- a/src/Components/Contacts/Contacts.scss
+++ b/src/Components/Contacts/Contacts.scss
@@ -5,7 +5,6 @@
   font-weight: normal;
   h1 {
     font-weight: 500;
-    font-size: 2.25rem;
   }
   h3 {
     font-weight: 500;
@@ -89,6 +88,21 @@
       font-size: 1.4rem;
 
       color: #ffffff;
+    }
+  }
+}
+@media all and (max-width: 768px) {
+  .contactBody {
+    .contactForm {
+      form {
+        input,
+        textarea {
+          font-size: 1.1rem;
+        }
+        textarea {
+          padding: 0.75rem;
+        }
+      }
     }
   }
 }
