--- a/src/Components/Home/HeroSection/HeroSection.scss
+++ b/src/Components/Home/HeroSection/HeroSection.scss
@@ -38,11 +38,15 @@
     font-weight: 500;
     font-size: 1.5rem;
   }
+
+  .main-count {
+    font-size: 2rem;
+  }
 }
 
 @media all and (min-width: 768px) {
   .hero-section {
-    margin-bottom: 6rem;
+    margin-bottom: 8rem;
     .mt-md-top1 {
       margin-top: 4rem !important;
     }
