--- a/src/Components/Home/HeroSection/HeroSection.scss
+++ b/src/Components/Home/HeroSection/HeroSection.scss
@@ -19,12 +19,18 @@
         font-weight: 500;
         font-size: 3rem;
       }
+      .quotes {
+        text-align: center;
+        font-size: 1rem;
+        font-style: italic;
+        width: 100%;
+      }
     }
   }
 
   .video-container {
     max-width: 100%;
-    height: auto;
+    height: 262px;
     z-index: 1;
     iframe {
       border-radius: 1rem;
@@ -47,9 +53,6 @@
 @media all and (min-width: 768px) {
   .hero-section {
     margin-bottom: 8rem;
-    .mt-md-top1 {
-      margin-top: 4rem !important;
-    }
     .mt-md-top2 {
       margin-top: -7rem !important;
     }
@@ -58,7 +61,6 @@
     }
     .video-container {
       margin-bottom: -10rem;
-      height: 270px;
     }
     .pulse {
       margin-top: -1rem;
@@ -81,6 +83,9 @@
       p {
         font-size: 1.1rem;
       }
+      .quotes {
+        font-size: 0.9rem !important;
+      }
     }
     .pulse {
       display: none;
@@ -96,7 +101,7 @@
       display: none;
     }
     .video-container {
-      height: 100%;
+      height: 198px;
     }
   }
 }
