--- a/src/Components/SlideShow/SlideShow.scss
+++ b/src/Components/SlideShow/SlideShow.scss
@@ -1,19 +1,19 @@
-.slideshow-container{
-    font-family: poppins;
-    text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 3rem;
-    background-color: white;
+.slideshow-container {
+  font-family: poppins;
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+  background-color: rgb(245, 245, 245);
 
-    h1{
-        font-size: 2.4rem;
-        margin-bottom: 1.5rem;
-    }
+  h1 {
+    font-size: 2.4rem;
+    margin-bottom: 1.5rem;
+  }
 }
 
-@media(max-width:1000px){
-    .slideshow-container{
-        padding-bottom: 0;
-    }
+@media (max-width: 1000px) {
+  .slideshow-container {
+    padding-bottom: 0;
+  }
 }
 @import "~react-image-gallery/styles/scss/image-gallery.scss";
