--- a/src/Components/Home/HeroSection/HeroSection.scss
+++ b/src/Components/Home/HeroSection/HeroSection.scss
@@ -20,9 +20,7 @@
         font-size: 3rem;
       }
       .quotes {
-        text-align: center;
         font-size: 1rem;
-        font-style: italic;
         width: 100%;
       }
     }
@@ -32,7 +30,7 @@
     max-width: 100%;
     height: 262px;
     z-index: 1;
-    iframe {
+    video {
       border-radius: 1rem;
       width: 100%;
       height: 100%;
