--- a/src/Components/TopBar/Topbar.scss
+++ b/src/Components/TopBar/Topbar.scss
@@ -42,7 +42,12 @@ a {
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
+  font-size: 1rem;
   line-height: 0.2;
+  &:hover {
+    color: #1f1f1f;
+    text-decoration: underline;
+  }
 }
 
 .active_top_link {
@@ -70,6 +75,11 @@ a {
 
   .links_top {
     margin-right: 2rem;
+  }
+}
+@media all and (max-width: 600px) {
+  .top_link:hover {
+    text-decoration: none;
   }
 }
 @media all and (max-width: 600px) {
