Some design changes done

--- a/src/Components/Contacts/Contacts.scss
+++ b/src/Components/Contacts/Contacts.scss
@@ -37,8 +37,8 @@
     button {
       max-width: 14rem;
       min-height: 4rem;
-      background: #333333;
-      border-radius: 1.25rem;
+      background: hsl(248, 100, 12);
+      border-radius: 1rem;
 
       font-size: 1.2rem;
       line-height: 2rem;
