--- a/src/Components/Home/HeroSection/HeroSection.scss
+++ b/src/Components/Home/HeroSection/HeroSection.scss
@@ -2,25 +2,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Ubuntu+Mono&display=swap");
 
 .hero-section {
-  display: flex;
-  flex-direction: column;
   color: hsl(40, 100%, 97%);
   font-family: "Poppins", sans-serif;
   font-size: 1.2rem;
 
   .background {
-    height: 60vh;
     background-image: linear-gradient(hsl(248, 100%, 11%), hsl(248, 50%, 11%));
 
     .hero-content {
       z-index: 1;
+      font-family: "Times New Roman", serif;
       h1 {
-        font-family: "Times New Roman", serif;
         font-weight: 500;
         font-size: 3rem;
       }
       .quotes {
-        font-size: 1rem;
         width: 100%;
       }
     }
@@ -38,9 +34,9 @@
   }
 
   .donateCount {
-    color: hsl(248, 100%, 11%);
     font-weight: 500;
     font-size: 1.5rem;
+    color: floralwhite;
   }
 
   .main-count {
@@ -50,12 +46,11 @@
 
 @media all and (min-width: 768px) {
   .hero-section {
-    margin-bottom: 8rem;
     .mt-md-top2 {
       margin-top: -7rem !important;
     }
     .mt-md--ve {
-      margin-top: -3rem !important;
+      margin-top: -1.5rem !important;
     }
     .video-container {
       margin-bottom: -10rem;
@@ -63,6 +58,9 @@
     .pulse {
       margin-top: -1rem;
       margin-left: -1rem;
+    }
+    .desktop-hide {
+      display: none;
     }
   }
 }
@@ -81,25 +79,24 @@
       p {
         font-size: 1.1rem;
       }
-      .quotes {
-        font-size: 0.9rem !important;
+    }
+    .donateCount {
+      text-align: center;
+      p {
+        font-size: 1.3rem;
       }
     }
     .pulse {
       display: none;
-    }
-    .donateCount {
-      text-align: center;
-      color: floralwhite;
-      p {
-        font-size: 1.3rem;
-      }
     }
     .mob-hide {
       display: none;
     }
     .video-container {
       height: 198px;
+    }
+    .mob-hide {
+      display: none;
     }
   }
 }
