--- a/src/Components/TopBar/Topbar.scss
+++ b/src/Components/TopBar/Topbar.scss
@@ -15,6 +15,9 @@
 a {
   text-decoration: none;
   color: #222222;
+  &:hover {
+    color: #222222;
+  }
 }
 
 .nssLogo {
@@ -93,6 +96,11 @@ a {
 
     .logoName {
       display: none !important;
+    }
+
+    .bdcLogo {
+      width: 4rem;
+      height: 4rem;
     }
 
     .nss {
