Time backgrd changed and Venue card title changed

--- a/src/Components/Home/HeroSec/HeroSec.scss
+++ b/src/Components/Home/HeroSec/HeroSec.scss
@@ -43,7 +43,7 @@
 
 .card1 {
   background-color: #edf3f9;
-  color: #0544a1;
+  color: #022649;
 }
 .card2 {
   background: url("./bg-droplets-red-small.png");
