--- a/src/Components/TopBar/Topbar.scss
+++ b/src/Components/TopBar/Topbar.scss
@@ -5,12 +5,12 @@
   src: url(./LiberationSerif-Regular.ttf) format("truetype");
 }
 
-// nav {
-//   position: sticky;
-//   top: 0rem;
-//   background-color: floralwhite;
-//   z-index: 2;
-// }
+nav {
+  position: sticky;
+  top: 0rem;
+  background-color: floralwhite;
+  z-index: 2;
+}
 
 a {
   text-decoration: none;
