--- a/src/Components/Loader/Loader.scss
+++ b/src/Components/Loader/Loader.scss
@@ -1,208 +1,122 @@
-
-.Loader {
-    --bg-color: hsl(49 37% 94%);
-    --typewriterSpeed: 1.3s;
-    --typewriterCharacters: 24;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.Loader{
-    background: rgb(247, 247, 247);
-    margin: 0;
-    font-family: "Source Sans Pro", sans-serif;
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    text-align: center;
-
-    #preloader{    
-    font-size: clamp(0.5rem, 0.5rem, 2rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content;
-}
-.text-1{
-    display:center;
-    font: 1.5em "Fira Sans", sans-serif;
-    padding:1%;
-    transform:translateY(-1.4em)
-}
-
-.text-1a{
-    display: inline-block;
-    font-weight: bold;
-   
-   
-    font-size: clamp(0.5rem, 0.5rem, 2rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content;
-}
-.text-2{
-    display:center;
-    font: 1.5em "Fira Sans", sans-serif;
-    padding:1%;
-    transform:translateY(-1.4em)    
-
-}
-.text-2a{
-    display: inline-block;
-    font-weight: bold;
-    font-size: clamp(0.5rem, 0.5rem, 2rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content; 
-}
-
-.text-3{
-    display:center;
-    font: 1.5em "Fira Sans", sans-serif;
-    padding:1%;
-    transform:translateY(-1.4em)
-}
-.text-3a{
-    display: inline-block;
-    font-weight: bold; 
-    font-size: clamp(0.5rem, 0.5rem, 2rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content;
-}
-img{
-    height:33%;
-    width:33%;
+body {
+  .loaderWrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: floralwhite;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     justify-content: center;
-   transform: translate(108%,-45%);
-animation :fadeIn 4.8s;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1;
+
+    .logo {
+      position: relative;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+      justify-items: center;
+      align-items: center;
+      width: 16rem;
+      height: 16rem;
+      border-radius: 50%;
+      overflow: hidden;
+      box-shadow: 0 5px 50px rgba(0, 0, 0, 0.5);
+      margin: 1rem;
+
+      .logoComponent {
+        grid-area: 1/1/2/2;
+        z-index: 1;
+      }
+      .ringReveal {
+        grid-area: 1/1/2/2;
+        z-index: -1;
+      }
+
+      img {
+        grid-area: 1/1/2/2;
+      }
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -12.5rem;
+        width: 5rem;
+        height: 100%;
+        background: rgba(255, 250, 240, 0.7);
+        transform: skewX(-30deg);
+        z-index: 2;
+        animation: shine 2s 2s forwards;
+      }
+    }
+    .textAnim {
+      display: grid;
+      h2 {
+        grid-area: 1/1/2/2;
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 2rem;
+      }
+      h2:nth-child(1) {
+        color: transparent;
+        -webkit-text-stroke: 2px hsl(0, 100%, 18%);
+      }
+      h2:nth-child(2) {
+        color: hsl(0, 100%, 18%);
+        animation: waterFill 1s ease-in-out 2s infinite alternate;
+      }
+    }
+  }
 }
-
-.text-1a{
-    font-size: clamp(0.5rem, 0.5rem, 2rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content;
+@keyframes shine {
+  100% {
+    left: 25rem;
   }
-  
-  .text-1a::before,
-  .text-1a::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-  
-  .text-1a::before {
-    background: rgb(247, 247, 247);
-    animation: typewriter var(--typewriterSpeed)
-      steps(var(--typewriterCharacters)) 0.02s forwards;
-  }
-  
-  .text-1a::after {
-    width: 0.125em;
-    background: black;
-    animation: typewriter var(--typewriterSpeed)
-        steps(var(--typewriterCharacters)) 0.02s forwards,
-      blink 750ms steps(var(--typewriterCharacters)) infinite;
-  }
-  .text-2a{
-    font-size: clamp(0.5rem, 0.5rem, 2rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content;
-  }
-  
-  .text-2a::before,
-  .text-2a::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-  
-  .text-2a::before {
-    background: rgb(247, 247, 247);
-    animation: typewriter var(--typewriterSpeed)
-      steps(var(--typewriterCharacters)) 1.55s forwards;
-  }
-  
-  .text-2a::after {
-    width: 0.125em;
-    background: black;
-    animation: typewriter var(--typewriterSpeed)
-        steps(var(--typewriterCharacters)) 1.55s forwards,
-      blink 750ms steps(var(--typewriterCharacters)) infinite;
-  }
-  .text-3a{
-    font-size: clamp(0.5rem, 0.5rem, 2rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content;
-  }
-  
-  .text-3a::before,
-  .text-3a::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-  
-  .text-3a::before {
-    background: rgb(247, 247, 247);
-    animation: typewriter var(--typewriterSpeed)
-      steps(var(--typewriterCharacters)) 2.58s forwards;
-  }
-  
-  .text-3a::after {
-    width: 0.125em;
-    background: black;
-    animation: typewriter var(--typewriterSpeed)
-        steps(var(--typewriterCharacters)) 2.58s forwards,
-      blink 750ms steps(var(--typewriterCharacters)) infinite;
-  }
-  b{
-      color:red;
-  }
-  
-  @keyframes typewriter {
-    to {
-      left: 100%;
-    }
-  }
-  
-  @keyframes blink {
-    to {
-      background: transparent;
-    }
-  }
-  
-  @keyframes fadeInUp {
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
-  @keyframes fadeIn{
-    0% {opacity:0.3;}
-  100% {opacity:1;}
-  }
-
-
 }
-
+@keyframes waterFill {
+  0% {
+    clip-path: polygon(
+      0 43%,
+      4% 33%,
+      11% 24%,
+      21% 20%,
+      33% 19%,
+      43% 26%,
+      48% 36%,
+      53% 46%,
+      58% 57%,
+      67% 62%,
+      78% 62%,
+      86% 58%,
+      94% 50%,
+      100% 39%,
+      100% 100%,
+      0% 100%
+    );
+  }
+  100% {
+    clip-path: polygon(
+      0 35%,
+      5% 44%,
+      10% 51%,
+      20% 57%,
+      30% 58%,
+      40% 53%,
+      49% 45%,
+      53% 35%,
+      59% 27%,
+      69% 21%,
+      79% 18%,
+      89% 24%,
+      96% 32%,
+      100% 43%,
+      100% 100%,
+      0% 100%
+    );
+  }
+}
