--- a/src/Components/Home/HeroSec/HeroSec.scss
+++ b/src/Components/Home/HeroSec/HeroSec.scss
@@ -31,6 +31,7 @@
   font-family: poppins;
   font-size: 1.2rem;
   border-radius: 0.5rem;
+  
 
   .time-block {
     display: inline-block;
@@ -38,6 +39,7 @@
   }
 }
 .venue-card {
+  --bs-gutter-x:0 !important;
   width: 100%;
   transform: translateY(-30%);
 }
